manifests/postgres-deployment.yaml
---
# postgres deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: llm-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: ankane/pgvector
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: pgdata
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata-pvc
---
# postgres service
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: llm-stack
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
